# c-make-none-app

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  dependencies.mk  install_dependencies.sh
include/: main.h
lib/microhttpd/lib/: libmicrohttpd.la  libmicrohttpd.so.12.58.0
lib/microhttpd/lib/pkgconfig/: libmicrohttpd.pc
src/: main.c  server.c
tests/: test_main.c
